# gpx-flyover

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: generate-video.yml
src/gpx_flyover/: __init__.py  camera.py  cli.py  geocode.py  gpx_parser.py  renderer.py  route.py  tiles.py  video.py
